--- a/etc/SNES1.html
+++ b/etc/SNES1.html
@@ -1,50 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A fullscreen macOS-like web app.">
-<title>SNES emulator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A fullscreen macOS-like web app.">
+    <title>SNES Emulator</title>
+    <script src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
+    <style>
+        body { text-align: center; background: black; color: white; }
+        canvas { image-rendering: pixelated; width: 512px; height: 448px; }
+    </style>
+</head>
 <body>
-<div class="app">
-<script type="text/javascript" src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
-<script>
+    <h1>SNES Emulator</h1>
+    <canvas id="gameCanvas" width="256" height="224"></canvas>
+    <script>
+        const canvas = document.getElementById("gameCanvas");
+        const ctx = canvas.getContext("2d");
+        const frameBuffer = new Uint32Array(256 * 224);
 
-// Initialize and set up outputs
-var nes = new jsnes.NES({
-  onFrame: function(frameBuffer) {
-    // ... write frameBuffer to screen
-  },
-  onAudioSample: function(left, right) {
-    // ... play audio sample
-  }
-});
+        const nes = new jsnes.NES({
+            onFrame: function(buffer) {
+                for (let i = 0; i < buffer.length; i++) {
+                    const color = buffer[i];
+                    frameBuffer[i] = 0xFF000000 | (color[0] << 16) | (color[1] << 8) | color[2];
+                }
+                const imageData = new ImageData(new Uint8ClampedArray(frameBuffer.buffer), 256, 224);
+                ctx.putImageData(imageData, 0, 0);
+            }
+        });
 
-// Read ROM data from disk (using Node.js APIs, for the sake of this example)
-const fs = require('fs');
-var romData = fs.readFileSync('path/to/rom.nes', {encoding: 'binary'});
+        fetch("https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/240pSuite.sfc")
+            .then(response => response.arrayBuffer())
+            .then(buffer => nes.loadROM(new Uint8Array(buffer)))
+            .catch(error => console.error("Failed to load ROM:", error));
 
-// Load ROM data as a string or byte array
-nes.loadROM(romData);
+        function startEmulation() {
+            function step() {
+                nes.frame();
+                requestAnimationFrame(step);
+            }
+            step();
+        }
 
-// Run frames at 60 fps, or as fast as you can.
-// You are responsible for reliable timing as best you can on your platform.
-nes.frame();
-nes.frame();
-// ...
+        // Start the emulator
+        startEmulation();
 
-// Hook up whatever input device you have to the controller.
-nes.buttonDown(1, jsnes.Controller.BUTTON_A);
-nes.frame();
-nes.buttonUp(1, jsnes.Controller.BUTTON_A);
-nes.frame();
-// ...
+        // Handle keyboard input for controls
+        document.addEventListener("keydown", (event) => {
+            const keyMap = {
+                ArrowUp: jsnes.Controller.BUTTON_UP,
+                ArrowDown: jsnes.Controller.BUTTON_DOWN,
+                ArrowLeft: jsnes.Controller.BUTTON_LEFT,
+                ArrowRight: jsnes.Controller.BUTTON_RIGHT,
+                z: jsnes.Controller.BUTTON_A,
+                x: jsnes.Controller.BUTTON_B,
+                a: jsnes.Controller.BUTTON_SELECT,
+                s: jsnes.Controller.BUTTON_START
+            };
+            if (keyMap[event.key]) nes.buttonDown(1, keyMap[event.key]);
+        });
 
-    var nes = new JSNES({ canvasId: "gameCanvas" });
-    fetch("https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/240pSuite.sfc") // Replace with your ROM URL
-        .then(response => response.arrayBuffer())
-        .then(buffer => nes.loadROM(new Uint8Array(buffer)));
-</script>
-  
+        document.addEventListener("keyup", (event) => {
+            const keyMap = {
+                ArrowUp: jsnes.Controller.BUTTON_UP,
+                ArrowDown: jsnes.Controller.BUTTON_DOWN,
+                ArrowLeft: jsnes.Controller.BUTTON_LEFT,
+                ArrowRight: jsnes.Controller.BUTTON_RIGHT,
+                z: jsnes.Controller.BUTTON_A,
+                x: jsnes.Controller.BUTTON_B,
+                a: jsnes.Controller.BUTTON_SELECT,
+                s: jsnes.Controller.BUTTON_START
+            };
+            if (keyMap[event.key]) nes.buttonUp(1, keyMap[event.key]);
+        });
+    </script>
 </body>
 </html>
