--- a/etc/SNES.html
+++ b/etc/SNES.html
@@ -7,7 +7,7 @@
     <title>JSNES: A JavaScript NES emulator</title>
     
     <!-- Link to the CSS file -->
-    <link href="/static/css/main.8653e781.chunk.css" rel="stylesheet">
+    <link href="https://jsnes.org/static/css/main.8653e781.chunk.css" rel="stylesheet">
   </head>
   
   <body>
@@ -84,7 +84,7 @@
     </script>
 
     <!-- Static JavaScript files -->
-    <script src="/static/js/2.fa5df9e5.chunk.js"></script>
-    <script src="/static/js/main.6056b21a.chunk.js"></script>
+    <script src="https://jsnes.org/static/js/2.fa5df9e5.chunk.js"></script>
+    <script src="https://jsnes.org/static/js/main.6056b21a.chunk.js"></script>
   </body>
 </html>
