--- a/etc/NES.html
+++ b/etc/NES.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Embedding Example</title>
+    
+    <script type="text/javascript" src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
+    <script type="text/javascript">
+      window.onload = function() {
+        // Create NES emulator instance
+        var nes = new jsnes.NES({
+          onFrame: function(frameBuffer) {
+            var canvas = document.getElementById('nes-canvas');
+            var ctx = canvas.getContext('2d');
+            // Draw the frame to the canvas
+            ctx.putImageData(new ImageData(new Uint8ClampedArray(frameBuffer), 256, 240), 0, 0);
+          }
+        });
 
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Embedding Example</title>
-		
-		<script type="text/javascript" src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
-		<script type="text/javascript" src="https://raw.githubusercontent.com/bfirsh/jsnes/refs/heads/master/example/nes-embed.js"></script>
-		<script>window.onload = function(){nes_load_url("nes-canvas", "InterglacticTransmissing.nes");}</script>
-	</head>
-	<body>
-		<div style="margin: auto; width: 75%;">
-			<canvas id="nes-canvas" width="256" height="240" style="width: 100%"/>
-		</div>
-		<p>DPad: Arrow keys<br/>Start: Return, Select: Tab<br/>A Button: A, B Button: S</p>
-	</body>
+        // Fetch the ROM from the URL and load it into the emulator
+        fetch('https://archive.org/download/8bit-adv-steinsgate/steinsgate.nes')
+          .then(response => response.arrayBuffer())
+          .then(buffer => {
+            nes.loadROM(new Uint8Array(buffer));  // Load the ROM into the emulator
+            nes.start();  // Start the emulator after loading the ROM
+          })
+          .catch(error => console.error('Error loading ROM:', error));
+      };
+    </script>
+  </head>
+  <body>
+    <div style="margin: auto; width: 75%;">
+      <canvas id="nes-canvas" width="256" height="240" style="width: 100%"></canvas>
+    </div>
+    <p>DPad: Arrow keys<br/>Start: Return, Select: Tab<br/>A Button: A, B Button: S</p>
+  </body>
 </html>
