--- a/etc/NES.html
+++ b/etc/NES.html
@@ -17,8 +17,8 @@
           }
         });
 
-        // Fetch the ROM from the raw GitHub URL and load it into the emulator
-        fetch('https://raw.githubusercontent.com/Internetperson-dev/site/1c10147b51ad3b9062f0a39eec03490f30bab967/etc/steinsgate.nes')
+        // Fetch the ROM from archive.org and load it into the emulator
+        fetch('https://archive.org/download/8bit-adv-steinsgate/steinsgate.nes')
           .then(response => response.arrayBuffer())
           .then(buffer => {
             nes.loadROM(new Uint8Array(buffer));  // Load the ROM into the emulator
