--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@ button:hover {
     <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
     <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/SNES.html'">SNES Emu</button>
+      <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/">Super Smash Flash</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
     <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
+
+
+  https://www.supersmashflash.com/play/ssf1/
     <footer>Created by Internetperson-dev</footer>
 </div>
 </body>
