--- a/etc/fortnitepwa/index.html
+++ b/etc/fortnitepwa/index.html
@@ -17,7 +17,7 @@
         }
         
         document.addEventListener("DOMContentLoaded", () => {
-            window.location.href = "https://www.nvidia.com/en-us/geforce-now/games/fortnite/";
+            window.location.href = "https://play.geforcenow.com/games?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a&lang=en_GB&asset-id=01_1d330568-227d-4856-b235-a54c4418ae5a";
         });
     </script>
 </head>
