--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@ button:hover {
     <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
     <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/SNES.html'">SNES Emu</button>
-      <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/">Super Smash Flash</button>
-      <button onclick="location.href='  https://kbhgames.com/game/super-smash-flash-2">Super Smash Flash 2</button>
+    <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/">Super Smash Flash</button>
+    <button onclick="location.href='  https://kbhgames.com/game/super-smash-flash-2">Super Smash Flash 2</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/etc/fortnitepwa/index.html'">Fortnite PWA</button>
     <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
