--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ button:hover {
     <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
     <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
     <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
-    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/SNES.html'">SNES Emu</button>
+    <button onclick="location.href='https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/'">SNES Emu</button>
     <button onclick="location.href='https://www.supersmashflash.com/play/ssf1/'">Super Smash Flash</button>
     <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
