--- a/etc/fortnitepwa/index.html
+++ b/etc/fortnitepwa/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <h1>Fortnite on GeForce Now</h1>
-    <p id="redirect-message">To add this to your iOS home screen, tap <strong>Share</strong> and then <strong>Add to Home Screen</strong>. The redirect will start in a few seconds.</p>
+    <p id="redirect-message">To add this to your iOS home screen, tap <strong>Share </strong> in Safari and then <strong>Add to Home Screen</strong>. The redirect will start in a few seconds.</p>
     <button id="go-now" onclick="goToFortnite()">Go Now</button>
 </body>
 </html>
