--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ button:hover {
     <button onclick="location.href='https://kbhgames.com/game/super-smash-flash-2'">Super Smash Flash 2</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/fortnitepwa/index.html'">Fortnite PWA</button>
+    <button onclick="location.href='https://yell0wsuit.page/assets/games/angry-birds-chrome/index.html'">Angry Birds Chrome</button>
     <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-good.html'">yt-good</button>
