--- a/etc/fortnitepwa/index.html
+++ b/etc/fortnitepwa/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
-    <title>Fortnite GeForce Now</title>
+    <title>Fortnite</title>
     <link rel="icon" href="icon.png">
     <link rel="manifest" href="manifest.json">
     <script>
@@ -24,7 +24,7 @@
         });
         
         function goToFortnite() {
-            window.location.href = "https://www.nvidia.com/en-us/geforce-now/games/fortnite/";
+            window.location.href = "https://play.geforcenow.com/games?game-id=46bfab06-d864-465d-9e56-2d9e45cdee0a&lang=en_GB&asset-id=01_1d330568-227d-4856-b235-a54c4418ae5a";
         }
     </script>
     <style>
