--- a/etc/fortnitepwa/index.html
+++ b/etc/fortnitepwa/index.html
@@ -7,6 +7,7 @@
     <title>Fortnite</title>
     <link rel="icon" href="icon.png">
     <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <script>
         // Check if service workers are supported and register the service worker
         if ('serviceWorker' in navigator) {
