--- a/etc/fortnitepwa/index.html
+++ b/etc/fortnitepwa/index.html
@@ -7,8 +7,10 @@
     <title>Fortnite</title>
     <link rel="icon" href="icon.png">
     <link rel="manifest" href="manifest.json">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-title" content="GeForce NOW">
     <script>
         // Check if service workers are supported and register the service worker
         if ('serviceWorker' in navigator) {
