--- a/etc/fortnitepwa/index.html
+++ b/etc/fortnitepwa/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Apple PWA stuff -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">    
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style"  content="black-translucent">     <!-- possible content values: default, black or black-translucent -->
+    
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000">
     <title>Fortnite</title>
     <link rel="icon" href="icon.png">
