--- a/etc/foot.html
+++ b/etc/foot.html
@@ -7,6 +7,7 @@
   <!-- Pico.css -->
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+<article data-theme="dark">
 
   <style>
     /* Additional minor customizations (optional) */
